testcases/valid/two_classes.shp
class A<p1, p2> where
    p1: [A<p1, p2>],
    p2: [B<p2, p1>]
{
}

class B<p1, p2> where
    p1: [B<p1, p2>],
    p2: [A<p2, p1>]
{
}
