testcases/parse_error/none_formal_pool_param.shp
class Main<none> where
    none: [Main<none>]
{
    f1: i32;
}
